___________________________________
|      |  |  |     |  _  |     |  |
|  |___|  |  |  |  |    _|  |  |  |    GNU GLOBAL source code tag system
|  |   |  |  |  |  |     |     |  |
|  ~~  |   ~~|     |  ~  |  |  |   ~~|          for all hackers.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009
	Tama Communications Corporation

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

February 1 2010, Hideki IWAMOTO

	* Added built-in parser to improve the performance of making tag files.

	  When the built-in parser is used, the source files are parsed only once. 
	  The candidate of reference and other symbols are written to the temporary
	  file in Pass1, and read in Pass2.

	Pass 1:
	                             +-------+ 
	  source files =============>| gtags |============> GTAGS
	                             |       |============> GPATH
	                             |       | tag record
	                             |       |============> temporary file
	                             +-------+
	Pass 2:
	                 tag record  +-------+
	 temporary file ============>| gtags |============> GRTAGS
	                             |       |
	          GTAGS ============>|       |============> GSYMS
	                             +-------+

February 18 2009, Shigio YAMAGUCHI

	* Rewrote the stack in libutil/find.c using the varray (libutil/varray.c)
	  instead of static array.
	* Changed gtags(1) not to do useless inspection for the files in the
	  directories which are listed in the skip list.